<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies_white"
        android:title="@string/movies"/>
    <item
        android:id="@+id/navigation_tv_shows"
        android:icon="@drawable/ic_tv_white"
        android:title="@string/tv_show"/>
</menu>